# tin_dr

./: LICENSE  README.md
data/: readme_tesseract.txt
modules/: CMakeLists.txt
modules/include/: ImagePreprocessing.hpp  TextBlob.hpp  TextDetection.hpp  TextRecognition.hpp  Utils_Logging.hpp
modules/private_include/: TextDetection_Algo.hpp  TextRecognition_Algo.hpp
modules/src/: ImagePreprocessing.cpp  TextBlob.cpp  TextDetection.cpp  TextDetection_Algo.cpp  TextRecognition.cpp  TextRecognition_Algo.cpp
samples/Detection/: CMakeLists.txt  main.cpp
samples/DetectionRecognition/: CMakeLists.txt  main.cpp
samples/Recognition/: CMakeLists.txt  main.cpp
